{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 220,
  "lineage": "b021d041-6d7a-abf4-2f6f-af8ba200e945",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-02fccecff4f19e207",
            "description": "Security group that allows public inbound traffic",
            "egress": [],
            "id": "sg-02fccecff4f19e207",
            "ingress": [],
            "name": "alb-sg-20210917193608837100000009",
            "name_prefix": "alb-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lb outbound",
            "from_port": 0,
            "id": "sgrule-3371891539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02fccecff4f19e207",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-729761624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02fccecff4f19e207",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "my-alb-logs",
                "enabled": true
              }
            ],
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/app-alb/4ea700eec862252f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "security_groups": [
              "sg-05b7b14fdd6da0f82"
            ],
            "subnets": [
              "subnet-00674f5cf73c6011f",
              "subnet-0fe469fde41db5637"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "app-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web.aws_security_group.this",
            "module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210917193608501600000008/109be93a09b2d2f9",
            "arn_suffix": "targetgroup/pref-20210917193608501600000008/109be93a09b2d2f9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/pref-20210917193608501600000008/109be93a09b2d2f9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pref-20210917193608501600000008",
            "name_prefix": "pref-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "pref-"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "pref-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-03da84470e512698f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0dcae7614cae267f3",
            "description": "Security group that allows public inbound traffic",
            "egress": [],
            "id": "sg-0dcae7614cae267f3",
            "ingress": [],
            "name": "autoscaling-sg-20210917193606616000000005",
            "name_prefix": "autoscaling-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Auto Scaling",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Auto Scaling",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-1054574627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dcae7614cae267f3",
            "self": false,
            "source_security_group_id": "sg-02fccecff4f19e207",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb.aws_security_group.this_name_prefix",
            "module.autoscaling.aws_security_group.this",
            "module.autoscaling.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "autoscaling outbound",
            "from_port": 0,
            "id": "sgrule-2626439766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dcae7614cae267f3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_security_group.this",
            "module.autoscaling.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-1140840266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dcae7614cae267f3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_security_group.this",
            "module.autoscaling.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-4118121215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dcae7614cae267f3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_security_group.this",
            "module.autoscaling.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0fe469fde41db5637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 250,
            "cidr_block": "192.168.1.0/24",
            "default_for_az": false,
            "id": "subnet-0fe469fde41db5637",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "state": "available",
            "tags": {
              "Name": "app-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-00674f5cf73c6011f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "192.168.2.0/24",
            "default_for_az": false,
            "id": "subnet-00674f5cf73c6011f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "state": "available",
            "tags": {
              "Name": "app-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_lb",
      "name": "bastion_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/net/bastion-lt-lb/639b04eee583ca23",
            "arn_suffix": "net/bastion-lt-lb/639b04eee583ca23",
            "dns_name": "bastion-lt-lb-639b04eee583ca23.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/net/bastion-lt-lb/639b04eee583ca23",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "bastion-lt-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00674f5cf73c6011f"
              },
              {
                "subnet_id": "subnet-0fe469fde41db5637"
              }
            ],
            "subnets": [
              "subnet-00674f5cf73c6011f",
              "subnet-0fe469fde41db5637"
            ],
            "tags": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "tags_all": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "vpc_id": "vpc-03da84470e512698f",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bastion_lb_listener_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/net/bastion-lt-lb/639b04eee583ca23/f7a6f9030b27b082",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/bastion-lt-lb-target/dde2ca8a12f5021a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/net/bastion-lt-lb/639b04eee583ca23/f7a6f9030b27b082",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/net/bastion-lt-lb/639b04eee583ca23",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_lb.bastion_lb",
            "module.bastion.aws_lb_target_group.bastion_lb_target_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bastion_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/bastion-lt-lb-target/dde2ca8a12f5021a",
            "arn_suffix": "targetgroup/bastion-lt-lb-target/dde2ca8a12f5021a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/bastion-lt-lb-target/dde2ca8a12f5021a",
            "lambda_multi_value_headers_enabled": false,
            "name": "bastion-lt-lb-target",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "tags_all": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "target_type": "instance",
            "vpc_id": "vpc-03da84470e512698f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0b0c5f6c892cc57f5",
            "description": "Enable SSH access to the bastion host from external via SSH port",
            "egress": [],
            "id": "sg-0b0c5f6c892cc57f5",
            "ingress": [],
            "name": "bastion-lt-host",
            "name_prefix": "",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "tags_all": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instances_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-02f0540dc5d6b9838",
            "description": "Enable SSH access to the Private instances from the bastion via SSH port",
            "egress": [],
            "id": "sg-02f0540dc5d6b9838",
            "ingress": [],
            "name": "bastion-lt-priv-instances",
            "name_prefix": "",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "tags_all": {
              "description": "vieskovtf_bastion_description",
              "name": "vieskovtf_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Outgoing traffic from bastion to instances",
            "from_port": 0,
            "id": "sgrule-4228179765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b0c5f6c892cc57f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion_host_security_group",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.1.0/24",
              "192.168.2.0/24",
              "0.0.0.0/0"
            ],
            "description": "Incoming traffic to bastion",
            "from_port": 22,
            "id": "sgrule-828956781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b0c5f6c892cc57f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion_host_security_group",
            "module.bastion.data.aws_subnet.subnets",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Incoming traffic from bastion",
            "from_port": 22,
            "id": "sgrule-1774657587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02f0540dc5d6b9838",
            "self": false,
            "source_security_group_id": "sg-0b0c5f6c892cc57f5",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion_host_security_group",
            "module.bastion.aws_security_group.private_instances_security_group",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0232569b22a3badbd",
            "description": "Security group that allows public inbound traffic",
            "egress": [],
            "id": "sg-0232569b22a3badbd",
            "ingress": [],
            "name": "db-sg-20210917193608461500000007",
            "name_prefix": "db-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-3034080253",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0232569b22a3badbd",
            "self": false,
            "source_security_group_id": "sg-05b7b14fdd6da0f82",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db.aws_security_group.this",
            "module.db.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.web.aws_security_group.this",
            "module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-2935780112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0232569b22a3badbd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db.aws_security_group.this",
            "module.db.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-2057833238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0232569b22a3badbd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db.aws_security_group.this",
            "module.db.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.3.0/24"
            ],
            "description": "DB Connection",
            "from_port": -1,
            "id": "sgrule-1725910068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0232569b22a3badbd",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db.aws_security_group.this",
            "module.db.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.0.0/16"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-3227206993",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0232569b22a3badbd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db.aws_security_group.this",
            "module.db.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04c62fc4a0e0c9003",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-18-56-66.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.56.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05a81de2d199f1bfe",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-131-204-130.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.204.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-0f29cd5bd20408507",
            "id": "igw-0f29cd5bd20408507",
            "owner_id": "052776272001",
            "tags": {
              "Name": "app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c62fc4a0e0c9003",
            "connectivity_type": "public",
            "id": "nat-0bc186ad8eb6858c0",
            "network_interface_id": "eni-0584477b0703e2fab",
            "private_ip": "192.168.1.169",
            "public_ip": "3.18.56.66",
            "subnet_id": "subnet-0fe469fde41db5637",
            "tags": {
              "Name": "app-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a81de2d199f1bfe",
            "connectivity_type": "public",
            "id": "nat-03405d4c64bd2d153",
            "network_interface_id": "eni-0f0908c53af552a2d",
            "private_ip": "192.168.2.199",
            "public_ip": "3.131.204.130",
            "subnet_id": "subnet-00674f5cf73c6011f",
            "tags": {
              "Name": "app-vpc-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0189b329991cb6cfb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bc186ad8eb6858c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0189b329991cb6cfb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018ecf29f6bdb4d471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03405d4c64bd2d153",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018ecf29f6bdb4d47",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f29cd5bd20408507",
            "id": "r-rtb-07c8ebd5dc223545a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c8ebd5dc223545a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0189b329991cb6cfb",
            "id": "rtb-0189b329991cb6cfb",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-018ecf29f6bdb4d47",
            "id": "rtb-018ecf29f6bdb4d47",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-07c8ebd5dc223545a",
            "id": "rtb-07c8ebd5dc223545a",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c437054939bfa439",
            "route_table_id": "rtb-0189b329991cb6cfb",
            "subnet_id": "subnet-0b31d7611f3601ef0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06231fd220a7d65fe",
            "route_table_id": "rtb-018ecf29f6bdb4d47",
            "subnet_id": "subnet-0d1072f842ef4f217"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04601634164dbf47f",
            "route_table_id": "rtb-07c8ebd5dc223545a",
            "subnet_id": "subnet-0fe469fde41db5637"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075e125c498b2d017",
            "route_table_id": "rtb-07c8ebd5dc223545a",
            "subnet_id": "subnet-00674f5cf73c6011f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0b31d7611f3601ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0b31d7611f3601ef0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "app-vpc-db-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-db-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0d1072f842ef4f217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0d1072f842ef4f217",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "app-vpc-db-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-db-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0fe469fde41db5637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0fe469fde41db5637",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "app-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-00674f5cf73c6011f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-00674f5cf73c6011f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "app-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03da84470e512698f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-03da84470e512698f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03311b82f4aafbc9b",
            "default_route_table_id": "rtb-0c281642d2acd953f",
            "default_security_group_id": "sg-0855e690513057d2b",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03da84470e512698f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c281642d2acd953f",
            "owner_id": "052776272001",
            "tags": {
              "Name": "app-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "app-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-05b7b14fdd6da0f82",
            "description": "Security group that allows public inbound traffic",
            "egress": [],
            "id": "sg-05b7b14fdd6da0f82",
            "ingress": [],
            "name": "web-sg-20210917193608426200000006",
            "name_prefix": "web-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Web Server",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da84470e512698f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.3.0/24"
            ],
            "description": "Egress Rule",
            "from_port": 5432,
            "id": "sgrule-3847811255",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b7b14fdd6da0f82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web.aws_security_group.this",
            "module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http ",
            "from_port": 80,
            "id": "sgrule-70070405",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b7b14fdd6da0f82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web.aws_security_group.this",
            "module.web.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-3322821245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b7b14fdd6da0f82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web.aws_security_group.this",
            "module.web.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-2997316912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b7b14fdd6da0f82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web.aws_security_group.this",
            "module.web.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}